Kafka configuration still remain